# fleet-build

./: .gitignore  AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: lib.rs  main.rs
src/commands/: batch.rs  build.rs  clean.rs  fix.rs  mod.rs  push.rs  status.rs
tests/: integration.rs
